# cpp-games

./: .gitignore  README.md
Battleship/: CMakeLists.txt  LICENSE  README.md
Battleship/include/: Bot.h  Controller.h  Demo.h  Entity.h  Game.h  Menu.h  Player.h  Positions.h  Ship.h  State.h
Battleship/src/: Bot.cpp  Controller.cpp  Demo.cpp  Entity.cpp  Game.cpp  Menu.cpp  Player.cpp  Positions.cpp  Ship.cpp  State.cpp  main.cpp
Battleship/tests/: CMakeLists.txt  botShipsTest.cpp  initPositionsTest.cpp  setShipPositionTest.cpp  stackPositionsTest.cpp
PacMan/: AppIcon.aps  AppIcon.rc  CMakeLists.txt  README.md
PacMan/SFML/: CMakeLists.txt
PacMan/include/: Chase.hpp  Dots.hpp  Entity.hpp  Frightened.hpp  Game.hpp  GameController.hpp  Ghost.hpp  Map.hpp  Menu.hpp  PacMan.hpp  Publisher.hpp  Scatter.hpp  State.hpp  Strategy.hpp
PacMan/src/: Chase.cpp  Dots.cpp  Entity.cpp  Frightened.cpp  Game.cpp  GameController.cpp  Ghost.cpp  Map.cpp  Menu.cpp  PacMan.cpp  Publisher.cpp  Scatter.cpp  State.cpp  Strategy.cpp  main.cpp
PacMan/tests/: CMakeLists.txt  GhostDirectionTest.cpp  GhostEatenTest.cpp  GhostImageTest.cpp  GhostMoveTest.cpp  GhostWallTest.cpp  MenuImageTest.cpp  PacManDirectionTest.cpp  PacManGhostCollisionTest.cpp  PacManImageTest.cpp  PacManMoveTest.cpp  PacManSpriteTest.cpp  PacManWallTest.cpp  ScoreTest.cpp  SetDifficultyTest.cpp  StrategyTest.cpp  mapImageTest.cpp
